# kuchikae

./: .gitignore  Makefile  README.md  RELEASE_NOTES.md  app.py  flake.nix  opencode.json  pyproject.toml
.claude/: settings.local.json
.github/workflows/: test.yml
benchmarks/: benchmark_pipeline.py  benchmark_stt.py  benchmark_tts.py  benchmark_utils.py
docs/: ACCEPTANCE.md  ARCHITECTURE.md  ARCHITECTURE_DIAGRAM.md  BACKEND_CONTRACTS.md  CLAUDE_IMPLEMENTATION_CONTRACT.md  LOCAL_SETUP.md  MANUAL_TEST_CHECKLIST.md  PERFORMANCE_PLAN.md  PRODUCT_DIRECTION.md  QUALITY_EVALUATION.md  REAL_MODEL_SETUP.md  RELEASE.md  RELEASE_NOTES_v0.1.0.md  SECURITY_REVIEW.md  SPEC.md  STREAMING_PLAN.md  TESTING_STRATEGY.md  UX_POLICY.md  VOICE_EVAL_PLAN.md  experiments.md  model_survey.md  search_log.md
evals/: create_fixtures.py  judge_prompt.md  run_text_transform_eval.py  run_voice_eval.py  summarize_eval.py  summarize_voice_eval.py  text_transform_cases.yaml  voice_cases.yaml
evals/results/: README.md  llm_all.jsonl  llm_kansai.jsonl  qwen25_instruct_baseline.jsonl  smoke.jsonl  voice_eval_dummy_pipeline_run1.jsonl  voice_eval_irodori_tts_only_baseline.jsonl  voice_eval_smoke.jsonl
kuchikae/: __init__.py  audio.py  audio_cache.py  audio_key.py  cli.py  counting_backends.py  logging.py  models.py  pipeline.py  processing_cache.py  quality.py  stt.py  text_transform.py  timing.py  types.py  ui.py  voice_context.py  voice_output.py  web.py
kuchikae/backends/: __init__.py  stt.py  stt_ct2.py  stt_nemo.py  stt_transformers.py  stt_transformers_whisper.py  voice_output.py
kuchikae/domain/: __init__.py  audio.py  audio_cache.py  audio_denoise.py  audio_emotion.py  audio_key.py  audio_stream.py  diagnostics.py  error_hints.py  events.py  metrics.py  processing_cache.py  stt.py  text_transform.py  timing.py  types.py  voice_output.py  voice_prompt.py  voice_style.py
kuchikae/pipeline/: __init__.py  audio_validation.py  config.py  executor.py  pipeline.py  steps.py  voice_prompt_resolver.py
kuchikae/prompts/: text_transform_casual.txt  text_transform_default.txt  text_transform_polite.txt  text_transform_summarize.txt  voice_output_default.txt
kuchikae/ui/: __init__.py  app.py  css.py  handlers.py  js.py  templates.py
logs/: diagnostics.jsonl
prompts/: preset_casual.txt  preset_casual_voice.txt  preset_emotional.txt  preset_emotional_voice.txt  preset_polite.txt  preset_polite_voice.txt  text_transform_default.txt  voice_output_default.txt
scripts/: benchmark_performance.py  eval_prompt_templates.py  smoke_e2e.py  smoke_real_stt.py  smoke_real_voice_output.py
site/: kuchikae-lp.html
tests/: test_app.py  test_audio.py  test_audio_cache.py  test_audio_emotion.py  test_audio_stream.py  test_cli_web.py  test_e2e.py  test_incremental_transform.py  test_metrics.py  test_models.py  test_performance.py  test_pipeline.py  test_pipeline_dummy.py  test_prompt_eval_dataset.py  test_quality.py  test_release_smoke.py  test_simple_mode.py  test_stt_real.py  test_stt_streaming.py  test_text_transform_dummy.py  test_text_transform_eval_cases.py  test_text_transform_real.py  test_text_transform_validation.py  test_ui.py  test_ui_templates.py  test_voice_context.py  test_voice_eval_cases.py  test_voice_output_dummy.py  test_voice_output_real.py  test_voice_output_streaming.py  test_voice_prompt.py  test_voice_prompt_resolver.py  test_voice_style.py  test_web.py
tests/contracts/: test_contract_smoke.py
(+4 files in other folders)
