[project]
name = "kuchikae"
version = "0.1.0"
requires-python = ">=3.11,<3.12"
dependencies = [
    "gradio",
    "numpy",
    "soundfile",
    "pyyaml",
    "pytest",
]

[project.optional-dependencies]
stt = [
    "faster-whisper",
]

[project.scripts]
kuchikae = "kuchikae.cli:main"

[tool.uv]
environments = ["sys_platform == 'darwin'"]

[tool.uv.sources]
kuchikae = { workspace = true }

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "slow: tests that load real models (e.g. Whisper, TTS)",
]

[dependency-groups]
dev = [
    "playwright",
    "pytest-playwright",
]

[project.urls]
Homepage = "https://github.com/Unjuno/kuchikae"
