[project]
name = "kuchikae"
version = "0.1.0"
requires-python = ">=3.11,<3.12"
dependencies = [
    "gradio",
    "numpy",
    "soundfile",
    "pyyaml",
]

[project.optional-dependencies]
test = [
    "pytest",
]
stt = [
    "faster-whisper",
    "transformers>=4.39.0",
]
nemo-stt = [
    "nemo_toolkit[asr]",
]
tts = [
    "torch>=2.12.0",
    "torchaudio>=2.11.0",
    "irodori-tts",
    "silentcipher",
]
real = [
    "kuchikae[stt,tts]",
]

[project.scripts]
kuchikae = "kuchikae.cli:main"

[tool.setuptools.packages.find]
include = ["kuchikae*"]

[tool.uv]
package = true
environments = ["sys_platform == 'darwin'"]

[tool.uv.sources]
kuchikae = { workspace = true }
irodori-tts = { git = "https://github.com/Aratako/Irodori-TTS.git" }
silentcipher = { git = "https://github.com/SesameAILabs/silentcipher.git", rev = "d46d7d0893a583d8968ab3a6626e2289faec9152" }

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "unit: fast pure tests",
    "contract: backend contract tests",
    "golden: text quality golden tests",
    "e2e: browser and UI tests",
    "slow: tests that load real models (e.g. Whisper, TTS)",
]

[dependency-groups]
dev = [
    "playwright",
    "pytest-playwright",
    "pytest",
]

[project.urls]
Homepage = "https://github.com/Unjuno/kuchikae"
