[project]
name = "kuchikae"
version = "0.1.2"
requires-python = ">=3.11,<3.12"
license = "MIT"
dependencies = [
    "gradio",
    "numpy",
    "soundfile",
    "pyyaml",
    "httpx",
]

[project.optional-dependencies]
test = [
    "pytest",
]
stt = [
    "faster-whisper",
    "transformers>=4.39.0",
]
nemo-stt = [
    "nemo_toolkit[asr]",
]
tts = [
    "torch>=2.12.0",
    "torchaudio>=2.11.0",
    "irodori-tts",
]
real = [
    "kuchikae[stt,tts]",
]

[project.scripts]
kuchikae = "kuchikae.cli:main"

[tool.setuptools.packages.find]
include = ["kuchikae*"]

[tool.uv]
package = true
environments = ["sys_platform == 'darwin'"]

[tool.uv.sources]
kuchikae = { workspace = true }
irodori-tts = { git = "https://github.com/Aratako/Irodori-TTS.git" }

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "unit: fast pure tests",
    "contract: backend contract tests",
    "golden: text quality golden tests",
    "e2e: browser and UI tests",
    "slow: tests that load real models (e.g. Whisper, TTS)",
]

[tool.ruff.lint.per-file-ignores]
"benchmarks/*.py" = ["E402"]
"tests/test_text_transform_eval_cases.py" = ["E402"]

[tool.mypy]
ignore_missing_imports = true

[dependency-groups]
dev = [
    "playwright",
    "pytest-playwright",
    "pytest",
    "ruff>=0.15.17",
    "mypy>=2.1.0",
]

[project.urls]
Homepage = "https://github.com/Unjuno/kuchikae"
